2002-02-09  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

2002-02-04  pottendo  <pottendo@utanet.at>

	* POTFILES.in: Added `uipalemu.c'.

2002-01-19  pottendo  <pottendo@utanet.at>

	* it.po: Updated (by Andrea).

2002-01-02  pottendo  <pottendo@utanet.at>

	* it.po: Updated (by Andrea).

	* de.po: Updated.

	* POTFILES.in: Added dga2.c

2001-12-09  pottendo  <pottendo@utanet.at>

	* it.po: Updated.

	* de.po: Updated.

2001-12-06  pottendo  <pottendo@utanet.at>

	* POTFILES.in: Added uipalcontrol.c to gnome file list.  

2001-12-02  pottendo  <pottendo@utanet.at>

	* POTFILES.in: Updated file list for Arch Unix. 

	* de.po: Updated translation.

2001-07-21  pottendo  <pottendo@utanet.at>

	* sv.po: Merged Peter's update

	* fr.po: Merged Eric's update

2001-07-15  pottendo  <pottendo@utanet.at>

	* de.po: Updated German translation.

2001-06-24  pottendo  <pottendo@utanet.at>

	* sv.po: Merged update from Peter Karlsson.

2001-06-20  pottendo  <pottendo@utanet.at>

	* de.po: Update German translation.

	* POTFILES.in: Updated for all *.c files in arch/unix/*. 

2001-06-04  pottendo  <pottendo@utanet.at>

	* POTFILES.in: Removed src/arch/unix/x11/gnome/uihotkey.c,
	src/arch/unix/x11/xaw/uihotkey.c 

2000-12-07  pottendo  <pottendo@utanet.at>

	* Introduced Peter Karlssons sv.po update.

2000-12-01  pottendo  <pottendo@utanet.at>

	* POTFILES.in: Added `src/print.c'.
	* de.po: Updated.

2000-10-08  Andreas Boose  <boose@linux.rz.fh-hannover.de>

	* POTFILES.in: Removed `arch/unix/print.c'.

2000-08-16  pottendo  <pottendo@utanet.at>

	* sv.po: Introduced Peter Karlssons upgrade to the swedish
	translation.

2000-08-06  pottendo  <pottendo@utanet.at>

	* Added `sv.po'. Contributed by Peter Karlsson.

2000-07-16  pottendo  <pottendo@utanet.at>

	* de.po: New translations.

	* POTFILES.in: Added instrumented files.

2000-07-14  pottendo  <pottendo@utanet.at>

	* de.po: Fixed all fuzzy entries, translated rest.
